[tool.poetry]
name = "aoc-2022-python"
version = "0.1.0"
description = "advent of code solutions using python for the year 2022"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "aoc_2022_python"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.23.5"
requests = "^2.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
